base/oauth-proxy/prometheus/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-oauth-proxy-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-oauth-proxy
  template:
    metadata:
      labels:
        app: prometheus-oauth-proxy
    spec:
      serviceAccountName: prometheus-oauth-proxy
      containers:
      - name: oauth-proxy
        image: quay.io/openshift/origin-oauth-proxy:4.12
        ports:
        - containerPort: 8443
          name: public
          args:
            - '--https-address=:8443'
            - '--provider=openshift'
            - '--openshift-service-account=prometheus-oauth-proxy'
            - '--upstream=http://prometheus-operated:9090'
            - '--tls-cert=/etc/tls/private/tls.crt'
            - '--tls-key=/etc/tls/private/tls.key'
            - '--cookie-secret-file=/etc/proxy/secrets/session_secret'
            - '--openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt'
            - '--openshift-sar={"resource":"namespaces","verb":"get"}'
            - '--skip-auth-regex=^/metrics'
            - '--skip-auth-regex=^/api/v1/query.*'
            - '--skip-auth-regex=^/api/v1/query_range.*'
            - '--skip-auth-regex=^/api/v1/label.*'
            - '--skip-auth-regex=^/api/v1/series.*'
            - '--skip-provider-button'
        volumeMounts:
        - mountPath: /etc/tls/private
          name: secret-prometheus-tls
        - mountPath: /etc/proxy/secrets
          name: secret-session-secret
      volumes:
      - name: secret-prometheus-tls
        secret:
          secretName: prometheus-tls
      - name: secret-session-secret
        secret:
          secretName: session-secret
---
