base/oauth-proxy/prometheus/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-oauth-proxy
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: prometheus-tls
spec:
  ports:
  - name: public
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: prometheus-oauth-proxy
---
