base/oauth-proxy/prometheus/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-route
spec:
  to:
    kind: Service
    name: prometheus-oauth-proxy
  port:
    targetPort: public
  tls:
    termination: reencrypt
---
